feat: Encode resources with data